2008-11-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* /content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
	Replaced calls to deleteCards() / deleteDirector() with
	deleteSelectedCards() to avoid refresh problems